--- a/desafios/d003/estilo/style.css
+++ b/desafios/d003/estilo/style.css
@@ -145,16 +145,17 @@ aside > h3{
     padding: 10px;
     margin: -10px -10px 0px -10px;
     border-radius: 10px 10px 0px 0px;
+    color: white;
 }
 aside{
     background-color: var(--cor4);
     padding: 10px;
     border-radius: 10px;
-    color: black;
+    color: white;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.344);
 }
 aside ul{
-    list-style-type: '\1F5F8\00A0';
+    list-style-type: '\1F5F8\00a0';
     list-style-position: inside;
     columns: 2;
     margin: 10px;
