--- a/desafios/d003/estilo/style.css
+++ b/desafios/d003/estilo/style.css
@@ -140,7 +140,7 @@ div.video > iframe{
     height: 94%;
     
 }
-aside > h3{
+main > article > aside h3{
     background-image: linear-gradient(to right, black, transparent);
     padding: 10px;
     margin: -10px -10px 0px -10px;
@@ -151,7 +151,7 @@ aside{
     background-color: var(--cor4);
     padding: 10px;
     border-radius: 10px;
-    color: white;
+    color: black;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.344);
 }
 aside ul{
@@ -159,6 +159,7 @@ aside ul{
     list-style-position: inside;
     columns: 2;
     margin: 10px;
+    color: black;
 }
 footer {
     background-color: var(--cor5);
