--- a/desafios/d003/estilo/style.css
+++ b/desafios/d003/estilo/style.css
@@ -154,7 +154,7 @@ aside{
     color: black;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.344);
 }
-aside ul{
+main > article > aside > ul{
     list-style-type: '\1F5F8\00a0';
     list-style-position: inside;
     columns: 2;
