--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,4 +1,14 @@
 @charset "URF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Cinzel:wght@400..900&family=Pacifico&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Cinzel:wght@400..900&family=Lumanosimo&family=Pacifico&display=swap');
+
+:root {
+    --fonte1:font-family: "Pacifico", cursive;
+    --fonte2:font-family: "Lumanosimo", cursive;
+    --fonte3:font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 * {
     margin: 0px;
     padding: 0px;
@@ -7,16 +17,20 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte3);
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center;
+    
 }
 header > h1{
     padding-top: 50px; /*Gerar um espaço no para cima*/
     font-variant: small-caps; /*Letras maiusculas, porem a primeira é maior*/
+    font-family: var(--fonte1);
+    font-size: 5vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -29,6 +43,24 @@ a:hover{
     text-decoration: underline;
     color: rgb(61, 61, 61);
 }
+section{
+   padding-top: 10vh;
+   padding-bottom: 10vh;
+   padding-left: 30px;
+   line-height: 2em;
+   font-size: 3vw;
+   font-family: var(--fonte2);
+}
+section > p{
+    padding-bottom: 2em;
+}
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.164);
+    display: inline-block;
+    padding: 5px;
+    border-radius: 8px;
+    back
+}
 section.normal{
     background-color: white;
     color: black;
@@ -36,6 +68,22 @@ section.normal{
 section.imagem{
     background-color: rgb(48, 48, 47);
     color: white;
+    box-shadow: inset 6px 6px 12px rgba(0, 0, 0, 0.411);
+    background-attachment: fixed;
+}
+section#img1{
+    background-image: url(imagens/background001.jpg);/*imagem desejada*/
+    background-position: right center; /*posição da imagem*/
+    background-size: cover; /*organizar a imagem (não vai deixar esticada)*/
+    
+}
+section#img2{
+    background-image: url(imagens/background002.jpg);/*imagem desejada*/
+    background-size: cover; /*organizar a imagem (não vai deixar esticada)*/
+    background-position: right bottom; /*posição da imagem*/
+}
+section#img2 > p{
+    background-color: rgba(0, 0, 0, 0.5);
 }
 footer{
     background-color: black;
