--- a/desafios/d04/style.css
+++ b/desafios/d04/style.css
@@ -20,12 +20,14 @@ header{
     border: 0px;
     margin: -8px -8px 0px -8px;
     text-align: center;
+    font-variant: small-caps;
 }
 nav{
     background-color: var(--color1);
-    padding: 10px;
+    padding: 2px;
     border: 1px;
     margin: 0px -8px 0px -8px;
+    font-size: 2vw;
 }
 nav a{
     color: rgb(255, 255, 255);
@@ -45,41 +47,54 @@ main{
     width: 90vw;
 }
 main h2{
-    text-align: left;
-    background-image: linear-gradient(to right, black, transparent);
-    color: white;
+    text-align: center;
+    background-color: black;
+    color: rgb(255, 255, 255);
     padding: 10px;
-    
-    
+    font-size: 5vw;
 }
 main p{
     text-shadow: 2px 2px 10px rgb(99, 99, 99);
     color: white;
+    background-color:rgba(0, 0, 0, 0.211);
+    margin: 10px;
+    border-radius: 10px;
+    text-align: justify;
+    text-indent: 15px;
+    font-size: 3vw;
 }
 main article{
-    background-position: center center;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 main article#violao{
-    background-image: url(img/violão.jpg);
+    background-image: url(img/fundo.jpg);
 }
 main article#baixo{
     background-image: url(img/fundo\ contrabaixo.jpg);
+    background-position: left center;
 }
 main article#guitarra{
     background-image: url(img/guitarra.jpg);
+    background-position: left center;
 }
 main article#bateria{
     background-image: url(img/bateria.jpg);
+    background-position: left center;
 }
 main h3{
-    text-align: center;
+    text-align: left;
+    background-image: linear-gradient(to right, rgba(133, 132, 132, 0.405), transparent);
+    color: black;
+    padding-left: 10px;
+    font-size: 4vw;
 }
 footer{
     color: white;
     text-align: center;
     background-color: black;
     padding: 10px;
-    margin: -10px;
+    width: 97%;
 }
 
